--- a/package.json
+++ b/package.json
@@ -7,15 +7,19 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "big-integer": "^1.6.26",
     "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
+    "crypto": "^1.0.1",
     "debug": "~2.6.9",
     "express": "~4.15.5",
     "hbs": "~4.0.1",
+    "lodash": "^4.17.4",
     "mongodb": "^3.0.1",
     "morgan": "~1.9.0",
     "q": "^1.5.1",
     "serve-favicon": "~2.4.5",
+    "ursa": "^0.9.4",
     "ws": "^3.3.3"
   }
 }
