--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "debug": "~2.6.9",
     "express": "~4.15.5",
     "hbs": "~4.0.1",
+    "jsonfile": "^4.0.0",
     "lodash": "^4.17.4",
     "mongodb": "^3.0.1",
     "morgan": "~1.9.0",
