--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
     "big-integer": "^1.6.26",
     "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
+    "cors": "^2.8.4",
     "crypto": "^1.0.1",
     "debug": "~2.6.9",
     "express": "~4.15.5",
+    "file-system": "^2.2.2",
     "hbs": "~4.0.1",
     "jsonfile": "^4.0.0",
     "lodash": "^4.17.4",
     "mongodb": "^3.0.1",
     "morgan": "~1.9.0",
+    "nodemailer": "^4.4.1",
+    "nodemailer-smtp-transport": "^2.7.4",
     "q": "^1.5.1",
     "serve-favicon": "~2.4.5",
     "ursa": "^0.9.4",
