--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "debug": "~2.6.9",
     "express": "~4.15.5",
     "file-system": "^2.2.2",
+    "firebase-admin": "^5.6.0",
     "hbs": "~4.0.1",
     "jsonfile": "^4.0.0",
     "lodash": "^4.17.4",
